Test #1 to correct image apperance on safari

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -28,7 +28,6 @@ body {
 }
 
 img.series-show {
-    min-height: 100%;
     min-width: 100%;
 }
 
